syntax = "proto3";

package org;

option go_package = "genproto/org";

message DepAttendanceRequest{
    string depName = 1;
	string domain = 2;
}

message DepAttendanceResponse{
	string depId = 1;
	string depName = 2;
	bool captureCheckInLocation = 3;
	bool enforceLocationCheckIn = 4;
	bool enforceLocationCheckOut = 5;
    double requiredLat = 6;
	double requiredLng = 7;
	bool flexiHoursEnabled = 8;
	int32 flexiHourWindowInMin = 9;
	string orgCheckInTime = 10;
	string orgCheckOutTime = 11;
	int32 checkInMarginInMin = 12;
	float officeHours = 13;
}